# VIA-AI

./: LICENSE  README.md
Docs/ApplicationTutorial/: README.md
Docs/ApplicationTutorial/Calibrations/: README.md
Docs/ApplicationTutorial/Calibrations/CameraCalibration/: README.md  README_zh_tw.md
Docs/ApplicationTutorial/Calibrations/SystemCalibration/: README.md  README_zh_tw.md
Docs/ApplicationTutorial/FirstLaunch/: README.md
Docs/ApplicationTutorial/UserInterfaces/: README.md
Docs/ApplicationTutorial/UserInterfaces/ApplicationSettings/: README.md  README_zh_tw.md
Docs/ApplicationTutorial/UserInterfaces/CameraCalibration/: README.md
Docs/ApplicationTutorial/UserInterfaces/SystemUI/: README.md
Docs/ApplicationTutorial/UserInterfaces/UserManagerment/: README.md  README_zh_tw.md
Docs/InstallationGuide/: README.md
Docs/InstallationGuide/commaai_giraffe_installation/: README.md
Docs/InstallationGuide/smartphone_mounts_installation/: README.md
System/: .gitignore  build.gradle  settings.gradle
System/3rdLibs/: VIA-Webservices-1.2-release.aar
System/AutomotiveKernel/: build.gradle
System/AutomotiveKernel/src/main/: AndroidManifest.xml
System/AutomotiveKernel/src/main/jni/: CMakeLists.txt  jni_AutomotiveController.cpp  jni_AutomotiveController.h  jni_CANbusModule.cpp  jni_CANbusModule.h  jni_CameraCalibrator.cpp  jni_CameraCalibrator.h  jni_CameraModule.cpp  jni_CameraModule.h  jni_SensingModule.cpp  jni_SensingModule.h  jni_Utility.cpp  jni_Utility.h  jni_glModel_ImageModel.cpp  jni_glModel_ImageModel.h  jni_systemInterface.cpp
System/AutomotiveKernel/src/main/jni/VIALibs/: README.md
System/AutomotiveKernel/src/main/jni/VIALibs/SensingComponent/include/mobile360/CameraCoord/: CameraCalibrator.h  CameraModule.h  CameraParameterLUT.h  CameraTypes.h  CoordCvtTypes.h  version.h
System/AutomotiveKernel/src/main/jni/VIALibs/SensingComponent/include/mobile360/LaneDetector/: CurveFitting.h  LaneDetector.h  LaneLightDetector.h  LaneMarkingContext.h  LaneMarkingImagerFilter.h  LaneModel.h  LaneModelContext.h  PerspectiveLookupTable.h  version.h
System/AutomotiveKernel/src/main/jni/VIALibs/SensingComponent/include/mobile360/SensingComponent/: SensingComponent.h  SensingSamples.h  SensingTask.h  types.h  version.h
System/AutomotiveKernel/src/main/jni/VIALibs/SensingComponent/include/mobile360/adas-core/: version.h
System/AutomotiveKernel/src/main/jni/VIALibs/SensingComponent/include/mobile360/adas-core/media/: frame_buffer.h  frame_types.h
System/AutomotiveKernel/src/main/jni/VIALibs/SensingComponent/include/mobile360/adas-core/utils/: LUT_PixelFormat.h  ScaledLookupTable.h  adas-logger.h  config.h  configure.h  mathTool.h  stopwatch.h  types_c.h  utils.h
System/AutomotiveKernel/src/main/jni/automotiveControl/: AutomotiveController.cpp  AutomotiveController.h  CMakeLists.txt
System/AutomotiveKernel/src/main/jni/automotiveControl/Command/: command.h
System/AutomotiveKernel/src/main/jni/automotiveControl/LatitudePlanner/: LatitudePlan.cpp  LatitudePlan.h  LatitudePlanner.cpp  LatitudePlanner.h  LatitudePlannerTask.cpp  LatitudePlannerTask.h  PIDController.cpp  PIDController.h
System/AutomotiveKernel/src/main/jni/automotiveControl/LongitudePlanner/: CMakeLists.txt  LongitudePlan.cpp  LongitudePlan.h  LongitudePlanner.cpp  LongitudePlanner.h
System/AutomotiveKernel/src/main/jni/car/: CMakeLists.txt  CarContext.cpp  CarContext.h  CarDefines.h  CarModel.cpp  CarModel.h
System/AutomotiveKernel/src/main/jni/exceptions/: AccessUnfinishedOperationException.h  ErrorAttributeDataPermutationException.h  Exceptions.h  FileNotFoundException.h  ShaderDataNotCreatedException.h
System/AutomotiveKernel/src/main/jni/glModel/: CMakeLists.txt
System/AutomotiveKernel/src/main/jni/glModel/core/: BaseModel.h  BaseShaderProgram.cpp  BaseShaderProgram.h  CMakeLists.txt  types.h
System/AutomotiveKernel/src/main/jni/glModel/image/: CMakeLists.txt  ImageModel.cpp  ImageModel.h  ImageShaderData.cpp  ImageShaderData.h
System/AutomotiveKernel/src/main/jni/glModel/lane/: CMakeLists.txt  LaneModel.cpp  LaneModel.h  LaneShaderData.cpp  LaneShaderData.h
System/AutomotiveKernel/src/main/jni/tools/: CMakeLists.txt  TimeFactor.cpp  TimeFactor.h  TimeTag.cpp  TimeTag.h
System/AutomotiveKernel/src/main/jni/vBus/: CANDongles.cpp  CANDongles.h  CANPackers.h  CANPasers.h  CANbusDefines.h  CANbusModule.cpp  CANbusModule.h  CMakeLists.txt  types.h
System/AutomotiveKernel/src/main/jni/vBus/CANDongles/: CANDongleInterface.h  CANDongle_UserManual.cpp  CANDongle_UserManual.h  CANDongle_commaai_whitePanda.cpp  CANDongle_commaai_whitePanda.h  CMakeLists.txt
System/AutomotiveKernel/src/main/jni/vBus/Honda/: CANDefines.h  CANPacker.cpp  CANPacker.h  CANPaser.cpp  CANPaser.h  CMakeLists.txt
System/Utility/: CMakeLists.txt  build.gradle  proguard-rules.pro
System/Utility/jni/: Android.mk  Application.mk  capture.c  capture.h  colorConvert.c  colorConvert.h  rawrender.c  util.c  util.h  video_device.c  video_device.h  webcam.c  webcam.h  yuv.c  yuv.h
System/Utility/src/main/: AndroidManifest.xml
System/Utility/src/main/java/com/viatech/utility/camera/: AvcDecoder.java  AvcDecoderAdvance.java  Camera.java  Camera2.java  FakeCameraGPU.java  NativeCamera.java  NativeWebcam.java  VIACamera.java  VIACameraImpl.java
System/Utility/src/main/java/com/viatech/utility/gles/: CameraViewModel.java  ContextFactory.java  CustomImageModel.java  Drawable2d.java  EglCore.java  EglSurfaceBase.java  FullFrameRect.java  GLUtility.java  GlUtil.java  SingleEGLImageModel.java  Texture2dProgram.java  VIASurfaceView.java  WindowSurface.java  WindowSurfaceFactory.java
System/Utility/src/main/java/com/viatech/utility/tool/: CPUStatistic.java  FPSCalculator.java  Helper.java  NativeRender.java  OverlayView.java  TimeStatistic.java
System/Utility/src/main/java/com/viatech/utility/video/: AvcEncoder.java  MediaPlayerGrabber.java  VIARecorder.java
System/Utility/src/main/res/values/: strings.xml
System/app/: build.gradle
System/gradle/wrapper/: gradle-wrapper.properties
(+145 files in other folders)
